# english

./: CMakeCPack.cmake  CMakeLists.txt  INSTALL.md
cmake/: englishConfig.cmake.in
src/: CMakeLists.txt  poem.cpp  poem.hpp  poet.cpp  poet.hpp
src/details/: extractor.cpp  extractor.hpp
src/words/: adjectives.hpp  adverbs.hpp  articles.hpp  nouns.hpp  prepositions.hpp  verbsi.hpp  verbst.hpp
